Feat: Add create user route
