# internal/handler/routes.go
@@ -3,24 +3,38 @@ package handler
 import (
 	"net/http"
 
+	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
+
 	_ "github.com/kisalto/Feel-The-Night-Swagger/docs"
-	httpSwagger "github.com/swaggo/http-swagger/v2"
+	"github.com/kisalto/Feel-The-Night-Swagger/internal/database"
+	"github.com/kisalto/Feel-The-Night-Swagger/internal/services"
 )
 
 // SetupRoutes registra todas as rotas da sua API
-func SetupRoutes() http.Handler {
-	mux := http.NewServeMux()
+func SetupRoutes() *gin.Engine {
+	router := gin.Default()
 
-	// Rota do Swager
-	mux.HandleFunc("GET /swagger/", httpSwagger.WrapHandler)
+	// Inicialização de serviços e handlers
+	userService := services.NewUserService(database.DB) // Assumindo que seu pacote database expõe a variável 'DB' do GORM
+	userHandler := NewUserHandler(userService)
 
-	// Exemplo de rotas
-	mux.HandleFunc("GET /health", HealthCheckHandler)
+	// Rota do Swagger
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	return mux
+	// Rotas gerais
+	router.GET("/health", HealthCheckHandler)
+
+	// Rotas de Usuários
+	router.POST("/users", userHandler.CreateUser)
+	router.GET("/users/:id", userHandler.GetUserById)
+
+	return router
 }
 
-func HealthCheckHandler(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusOK)
-	w.Write([]byte(`{"status": "ok"}`))
+func HealthCheckHandler(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"status": "ok",
+	})
 }
